<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceScreen app:key="main" app:title="@string/lorie_pref_main">
        <Preference app:title="@string/lorie_pref_output" app:fragment="output" />
        <Preference app:title="@string/lorie_pref_pointer" app:fragment="pointer" />
        <Preference app:title="@string/lorie_pref_kbd" app:fragment="kbd" />
        <Preference app:title="@string/lorie_pref_other" app:fragment="other" />
        <Preference app:key="version" app:title="@string/lorie_pref_version" />
    </PreferenceScreen>

    <PreferenceScreen app:key="output" app:title="@string/lorie_pref_output">
        <ListPreference
            app:key="displayResolutionMode"
            app:title="@string/lorie_pref_displayResolutionMode"
            app:defaultValue="native"
            app:entries="@array/displayResolutionVariants"
            app:entryValues="@array/displayResolutionVariants" />
        <SeekBarPreference
            app:key="displayScale"
            app:title="@string/lorie_pref_displayScale"
            app:defaultValue="100"
            app:min="30"
            android:max="300"
            app:seekBarIncrement="10"
            app:showSeekBarValue="true"
            app:updatesContinuously="true" />
        <ListPreference
            app:key="displayResolutionExact"
            app:title="@string/lorie_pref_displayResolutionExact"
            app:defaultValue="1280x1024"
            app:entries="@array/displayResolution"
            app:entryValues="@array/displayResolution"
            tools:ignore="DuplicateSpeakableTextCheck" />
        <EditTextPreference
            app:key="displayResolutionCustom"
            app:title="@string/lorie_pref_displayResolutionCustom"
            app:defaultValue="1280x1024"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            app:key="adjustResolution"
            app:title="@string/lorie_pref_adjustResolution"
            app:summary="@string/pref_summary_requiresExactOrCustom"
            app:defaultValue="false" />
        <SwitchPreferenceCompat
            app:key="displayStretch"
            app:title="@string/lorie_pref_displayStretch"
            app:summary="@string/pref_summary_requiresExactOrCustom"
            app:defaultValue="false" />
        <SwitchPreferenceCompat
            app:key="Reseed"
            app:title="@string/lorie_pref_Reseed"
            app:summary="@string/lorie_pref_Reseed_summary"
            app:defaultValue="true" />
        <SwitchPreferenceCompat
            app:key="PIP"
            app:title="@string/lorie_pref_PIP"
            app:summary="@string/lorie_pref_PIP_summary"
            app:defaultValue="false" />
        <SwitchPreferenceCompat
            app:key="fullscreen"
            app:title="@string/lorie_pref_fullscreen"
            app:summary="@string/lorie_pref_fullscreen_summary"
            app:defaultValue="false" />
        <ListPreference
            app:key="forceOrientation"
            app:title="@string/lorie_pref_forceOrientation"
            app:defaultValue="auto"
            app:entries="@array/forceOrientationVariants"
            app:entryValues="@array/forceOrientationVariants" />
        <SwitchPreferenceCompat
            app:key="hideCutout"
            app:title="@string/lorie_pref_hideCutout"
            app:defaultValue="false" />
        <SwitchPreferenceCompat
            app:key="keepScreenOn"
            app:title="@string/lorie_pref_keepScreenOn"
            app:defaultValue="true" />
    </PreferenceScreen>

    <PreferenceScreen app:key="pointer" app:title="@string/lorie_pref_pointer">
        <ListPreference
            app:key="touchMode"
            app:title="@string/lorie_pref_touchMode"
            app:defaultValue="1"
            app:entries="@array/touchscreenInputModesEntries"
            app:entryValues="@array/touchscreenInputModesValues" />
        <SwitchPreferenceCompat
            app:key="scaleTouchpad"
            app:title="@string/lorie_pref_scaleTouchpad"
            app:summary="@string/pref_summary_requiresTrackpadAndNative"
            app:defaultValue="true" />
        <SwitchPreferenceCompat
            app:key="showStylusClickOverride"
            app:title="@string/lorie_pref_showStylusClickOverride"
            app:summary="@string/lorie_pref_showStylusClickOverride_summary"
            app:defaultValue="false" />
        <SwitchPreferenceCompat
            app:key="stylusIsMouse"
            app:title="@string/lorie_pref_stylusIsMouse"
            app:summary="@string/lorie_pref_stylusIsMouse_summary"
            app:defaultValue="false" />
        <SwitchPreferenceCompat
            app:key="stylusButtonContactModifierMode"
            app:title="@string/lorie_pref_stylusButtonContactModifierMode"
            app:summary="@string/lorie_pref_stylusButtonContactModifierMode_summary"
            app:defaultValue="false" />
        <SwitchPreferenceCompat
            app:key="showMouseHelper"
            app:title="@string/lorie_pref_showMouseHelper"
            app:summary="@string/lorie_pref_showMouseHelper_summary"
            app:defaultValue="false" />
        <SwitchPreferenceCompat
            app:key="pointerCapture"
            app:title="@string/lorie_pref_pointerCapture"
            app:summary="@string/lorie_pref_pointerCapture_summary"
            app:defaultValue="false" />
        <ListPreference
            app:key="transformCapturedPointer"
            app:title="@string/lorie_pref_transformCapturedPointer"
            app:defaultValue="no"
            app:entries="@array/transformCapturedPointerEntries"
            app:entryValues="@array/transformCapturedPointerValues" />
        <SeekBarPreference
            app:key="capturedPointerSpeedFactor"
            app:title="@string/lorie_pref_capturedPointerSpeedFactor"
            app:defaultValue="100"
            app:min="1"
            android:max="300"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true"
            app:updatesContinuously="true" />
        <SwitchPreferenceCompat
            app:key="tapToMove"
            app:title="@string/lorie_pref_tapToMove"
            app:defaultValue="false" />
    </PreferenceScreen>

    <PreferenceScreen app:key="kbd" app:title="@string/lorie_pref_kbd">
        <SwitchPreferenceCompat
            app:key="showAdditionalKbd"
            app:title="@string/lorie_pref_showAdditionalKbd"
            app:summary="@string/lorie_pref_showAdditionalKbd_summary"
            app:defaultValue="true" />
        <!-- this preference should be a part of `Prefs` but should not appear in PreferenceScreen -->
        <SwitchPreferenceCompat
            app:key="additionalKbdVisible"
            app:defaultValue="true"
            app:isPreferenceVisible="false" />
        <SwitchPreferenceCompat
            app:key="showIMEWhileExternalConnected"
            app:title="@string/lorie_pref_showIMEWhileExternalConnected"
            app:summary="@string/lorie_pref_showIMEWhileExternalConnected_summary"
            app:defaultValue="true" />
        <SwitchPreferenceCompat
            app:key="preferScancodes"
            app:title="@string/lorie_pref_preferScancodes"
            app:summary="@string/lorie_pref_preferScancodes_summary"
            app:defaultValue="false" />
        <SwitchPreferenceCompat
            app:key="hardwareKbdScancodesWorkaround"
            app:title="@string/lorie_pref_hardwareKbdScancodesWorkaround"
            app:summary="@string/lorie_pref_hardwareKbdScancodesWorkaround_summary"
            app:defaultValue="true" />
        <SwitchPreferenceCompat
            app:key="dexMetaKeyCapture"
            app:title="@string/lorie_pref_dexMetaKeyCapture"
            app:summary="@string/lorie_pref_dexMetaKeyCapture_summary"
            app:defaultValue="false" />
        <Preference
            app:key="enableAccessibilityService"
            app:title="@string/lorie_pref_enableAccessibilityService"
            app:summary="@string/lorie_pref_enableAccessibilityService_summary">
            <intent android:action="android.settings.ACCESSIBILITY_SETTINGS"/>
        </Preference>
        <SwitchPreferenceCompat
            app:key="enableAccessibilityServiceAutomatically"
            app:title="@string/lorie_pref_enableAccessibilityServiceAutomatically"
            app:summary="@string/lorie_pref_enableAccessibilityServiceAutomatically_summary"
            app:defaultValue="false" />
        <SwitchPreferenceCompat
            app:key="pauseKeyInterceptingWithEsc"
            app:title="@string/lorie_pref_pauseKeyInterceptingWithEsc"
            app:summary="@string/pref_summary_requiresIntercepting"
            app:defaultValue="false" />
        <SwitchPreferenceCompat
            app:key="filterOutWinkey"
            app:title="@string/lorie_pref_filterOutWinkey"
            app:summary="@string/lorie_pref_filterOutWinkey_summary"
            app:defaultValue="false" />
        <SwitchPreferenceCompat
            app:key="enforceCharBasedInput"
            app:title="@string/lorie_pref_enforceCharBasedInput"
            app:summary="@string/lorie_pref_enforceCharBasedInput_summary"
            app:defaultValue="false" />
    </PreferenceScreen>

    <PreferenceScreen app:key="other" app:title="@string/lorie_pref_other">
        <SwitchPreferenceCompat
            app:key="clipboardEnable"
            app:title="@string/lorie_pref_clipboardEnable"
            app:defaultValue="true" />
        <Preference
            app:key="requestNotificationPermission"
            app:title="@string/lorie_pref_requestNotificationPermission" />
        <Preference
            app:key="configureResponseToUserActions"
            app:title="@string/lorie_pref_configureResponseToUserActions"
            app:fragment="userActions" />
        <SwitchPreferenceCompat
            app:key="storeSecondaryDisplayPreferencesSeparately"
            app:title="@string/lorie_pref_storeSecondaryDisplayPreferencesSeparately"
            app:summary="@string/lorie_pref_storeSecondaryDisplayPreferencesSeparately_summary"
            app:defaultValue="false" />
    </PreferenceScreen>

    <PreferenceScreen app:key="ekbar" app:title="@string/lorie_pref_ekbar">
        <SwitchPreferenceCompat
            app:key="adjustHeightForEK"
            app:title="@string/lorie_pref_adjustHeightForEK"
            app:summary="@string/lorie_pref_adjustHeightForEK_summary"
            app:defaultValue="false" />
        <SwitchPreferenceCompat
            app:key="useTermuxEKBarBehaviour"
            app:title="@string/lorie_pref_useTermuxEKBarBehaviour"
            app:summary="@string/lorie_pref_useTermuxEKBarBehaviour_summary"
            app:defaultValue="false" />
        <SeekBarPreference
            app:key="opacityEKBar"
            app:title="@string/lorie_pref_opacityEKBar"
            app:defaultValue="100"
            app:min="1"
            android:max="100"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true"
            app:updatesContinuously="true" />
        <EditTextPreference
            app:key="extra_keys_config"
            app:title="@string/lorie_pref_extra_keys_config" />
    </PreferenceScreen>

    <PreferenceScreen app:key="userActions" app:title="@string/lorie_pref_userActions">
        <ListPreference
            app:key="swipeUpAction"
            app:title="@string/lorie_pref_swipeUpAction"
            app:defaultValue="no action"
            app:entries="@array/userActionsValues"
            app:entryValues="@array/userActionsValues" />
        <ListPreference
            app:key="swipeDownAction"
            app:title="@string/lorie_pref_swipeDownAction"
            app:defaultValue="toggle additional key bar"
            app:entries="@array/userActionsValues"
            app:entryValues="@array/userActionsValues" />
        <ListPreference
            app:key="volumeUpAction"
            app:title="@string/lorie_pref_volumeUpAction"
            app:defaultValue="no action"
            app:entries="@array/userActionsVolumeUpValues"
            app:entryValues="@array/userActionsVolumeUpValues" />
        <ListPreference
            app:key="volumeDownAction"
            app:title="@string/lorie_pref_volumeDownAction"
            app:defaultValue="no action"
            app:entries="@array/userActionsVolumeDownValues"
            app:entryValues="@array/userActionsVolumeDownValues" />
        <ListPreference
            app:key="backButtonAction"
            app:title="@string/lorie_pref_backButtonAction"
            app:defaultValue="toggle soft keyboard"
            app:entries="@array/userActionsValues"
            app:entryValues="@array/userActionsValues" />
        <ListPreference
            app:key="notificationTapAction"
            app:title="@string/lorie_pref_notificationTapAction"
            app:defaultValue="open preferences"
            app:entries="@array/userActionsValues"
            app:entryValues="@array/userActionsValues" />
        <ListPreference
            app:key="notificationButton0Action"
            app:title="@string/lorie_pref_notificationButton0Action"
            app:defaultValue="open preferences"
            app:entries="@array/userActionsValues"
            app:entryValues="@array/userActionsValues" />
        <ListPreference
            app:key="notificationButton1Action"
            app:title="@string/lorie_pref_notificationButton1Action"
            app:defaultValue="exit"
            app:entries="@array/userActionsValues"
            app:entryValues="@array/userActionsValues" />
        <ListPreference
            app:key="mediaKeysAction"
            app:title="@string/lorie_pref_mediaKeysAction"
            app:defaultValue="no action"
            app:entries="@array/userActionsMediaKeyValues"
            app:entryValues="@array/userActionsMediaKeyValues" />
    </PreferenceScreen>

    <PreferenceScreen app:key="gamepad" app:title="Gamepad IPC">
        <EditTextPreference
            app:key="gamepadHost"
            app:title="Host IP Address"
            app:summary="IP address for gamepad IPC connection"
            app:defaultValue="127.0.0.1"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="gamepadPortRumble"
            app:title="Port (Rumble)"
            app:summary="UDP port for DLL ↔ Android communication"
            app:defaultValue="4600"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="gamepadID"
            app:title="Gamepad ID"
            app:summary="Controller index (1-4)"
            app:defaultValue="1"
            app:useSimpleSummaryProvider="true" />
        <SeekBarPreference
            app:key="gamepadStateHz"
            app:title="Poll Rate (Hz)"
            app:summary="Gamepad state polling frequency"
            app:defaultValue="125"
            app:min="10"
            android:max="500"
            app:seekBarIncrement="5"
            app:showSeekBarValue="true"
            app:updatesContinuously="true" />
        <SwitchPreferenceCompat
            app:key="gamepadForwardX11"
            app:title="Forward to X11"
            app:summary="Forward gamepad events to the X11 server"
            app:defaultValue="false" />
        <ListPreference
            app:key="gamepadInputType"
            app:title="Input Type"
            app:summary="Protocol used to send gamepad data"
            app:defaultValue="xinput"
            app:entries="@array/gamepadInputTypeEntries"
            app:entryValues="@array/gamepadInputTypeValues" />
        <ListPreference
            app:key="gamepadMode"
            app:title="Gamepad Mode"
            app:summary="How gamepad inputs are mapped"
            app:defaultValue="mapped"
            app:entries="@array/gamepadModeEntries"
            app:entryValues="@array/gamepadModeValues" />
        <ListPreference
            app:key="gamepadVibrate"
            app:title="Vibration Mode"
            app:summary="Rumble / haptic feedback source"
            app:defaultValue="system"
            app:entries="@array/gamepadVibrateEntries"
            app:entryValues="@array/gamepadVibrateValues" />
        <SeekBarPreference
            app:key="gamepadVibrateStrength"
            app:title="Vibration Strength"
            app:summary="Intensity of haptic feedback (0 – 255)"
            app:defaultValue="128"
            app:min="0"
            android:max="255"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true"
            app:updatesContinuously="true" />
        <EditTextPreference
            app:key="gamepadName"
            app:title="Controller Name"
            app:summary="Name reported to the host"
            app:defaultValue="Termux-X11 Pad"
            app:useSimpleSummaryProvider="true" />
        <PreferenceCategory
            app:key="keybinds_section"
            app:title="Key Bindings"
            app:isPreferenceVisible="false">
        </PreferenceCategory>
    </PreferenceScreen>

</PreferenceScreen>
